Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-http-http-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-http-http-build-time-config.adoc.po
@@ -166,7 +166,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-http-http-build-time-config.adoc:65
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-http-http-build-time-config.adoc:70
