--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-vertx-http-config-group-auth-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-vertx-http-config-group-auth-config.adoc.po
@@ -142,7 +142,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-vertx-http-config-group-auth-config.adoc:56
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-vertx-http-config-group-auth-config.adoc:61
