--- a/l10n/po/ja_JP/_generated-config/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-all-config.adoc.po
@@ -14341,7 +14341,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-all-config.adoc:8033
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-all-config.adoc:8038
