--- a/l10n/po/ja_JP/_generated-config/config/quarkus-vertx-http-config-group-form-auth-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-vertx-http-config-group-form-auth-config.adoc.po
@@ -183,7 +183,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-vertx-http-config-group-form-auth-config.adoc:74
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-vertx-http-config-group-form-auth-config.adoc:79
