--- a/l10n/po/ja_JP/_generated-config/config/quarkus-vertx-http-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-vertx-http-general-config-items.adoc.po
@@ -238,7 +238,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-vertx-http-general-config-items.adoc:83
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-vertx-http-general-config-items.adoc:88
