--- a/l10n/po/ja_JP/_generated-config/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-vertx-http.adoc.po
@@ -312,7 +312,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-vertx-http.adoc:101
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-vertx-http.adoc:106
