--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-http-http-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-http-http-build-time-config.adoc.po
@@ -224,7 +224,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-http-http-build-time-config.adoc:92
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-http-http-build-time-config.adoc:97
