--- a/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
@@ -28,13 +28,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:24
 msgid "Qute is a templating engine designed specifically to meet the Quarkus needs.  The usage of reflection is minimized to reduce the size of native images.  The API combines both the imperative and the non-blocking reactive style of coding.  In the development mode, all files located in the `src/main/resources/templates` folder are watched for changes and modifications are immediately visible in your application.  Furthermore, Qute attempts to detect most of the template problems at build time and fail fast.  In this guide, you will find an <<hello_world_example,introductory example>>, the description of the <<core_features,core features>> and <<quarkus_integration,Quarkus integration>> details."
-msgstr ""
+msgstr "Quteは、Quarkusのニーズを満たすために特別に設計されたテンプレートエンジンです。ネイティブイメージのサイズを小さくするために、リフレクションの使用は最小限に抑えられています。APIは、命令型と非ブロッキング反応型のコーディングの両方のスタイルを組み合わせています。開発モードでは、 `src/main/resources/templates` フォルダーにあるすべてのファイルが変更されているかどうかが監視され、変更があった場合はすぐにアプリケーションに反映されます。さらに、Quteはビルド時にテンプレートの問題のほとんどを検出しようとし、早期に失敗します。このガイドでは、 link:#hello_world_example[導入例] 、 link:#core_features[コア機能] の説明、 link:#quarkus_integration[Quarkusの統合] の詳細について説明しています。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/qute-reference.adoc:26
 #, no-wrap
 msgid "Hello World Example"
-msgstr ""
+msgstr "ハローワールドの例"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:31
@@ -45,7 +45,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:32
 #, no-wrap
 msgid "hello.html"
-msgstr ""
+msgstr "hello.html"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:38
@@ -155,13 +155,13 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:84
 #, no-wrap
 msgid "Core Features"
-msgstr ""
+msgstr "コア機能"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/qute-reference.adoc:86
 #, no-wrap
 msgid "Basic Building Blocks"
-msgstr ""
+msgstr "基本的なビルディングブロック"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:89
@@ -172,7 +172,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:90
 #, no-wrap
 msgid "Comments "
-msgstr ""
+msgstr "コメント"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:94
@@ -1483,7 +1483,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:684
 msgid "The following operators are supported in `is`/`case` block conditions:"
-msgstr ""
+msgstr "`is` / `case` ブロック条件では、以下の演算子がサポートされています。"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:690
@@ -1495,74 +1495,74 @@ msgstr "例"
 #: upstream/_versions/1.11/guides/qute-reference.adoc:691
 #, no-wrap
 msgid "not equal"
-msgstr ""
+msgstr "not equal"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:692
 #, no-wrap
 msgid "`!=`, `not`, `ne`"
-msgstr ""
+msgstr "`!=`, `not`, `ne`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:694
 #, no-wrap
 msgid "`{#is not 10}`,`{#case != 10}`"
-msgstr ""
+msgstr "`{#is not 10}`,`{#case != 10}`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:698
 #: upstream/_versions/1.11/guides/qute-reference.adoc:710
 #, no-wrap
 msgid "`{#case le 10}`"
-msgstr ""
+msgstr "`{#case le 10}`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:702
 #, no-wrap
 msgid "`{#is >= 10}`"
-msgstr ""
+msgstr "`{#is >= 10}`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:706
 #, no-wrap
 msgid "`{#is < 10}`"
-msgstr ""
+msgstr "`{#is < 10}`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:711
 #, no-wrap
 msgid "in"
-msgstr ""
+msgstr "in"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:712
 #, no-wrap
 msgid "`in`"
-msgstr ""
+msgstr "`in`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:714
 #, no-wrap
 msgid "`{#is in 'foo' 'bar' 'baz'}`"
-msgstr ""
+msgstr "`{#is in 'foo' 'bar' 'baz'}`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:715
 #, no-wrap
 msgid "not in"
-msgstr ""
+msgstr "not in"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:716
 #, no-wrap
 msgid "`ni`,`!in`"
-msgstr ""
+msgstr "`ni`,`!in`"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/qute-reference.adoc:718
 #, no-wrap
 msgid "`{#is !in 1 2 3}`"
-msgstr ""
+msgstr "`{#is !in 1 2 3}`"
 
 #. type: Title ====
 #: upstream/_versions/1.11/guides/qute-reference.adoc:722
