--- a/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-multitenancy.adoc.po
@@ -593,7 +593,7 @@ msgstr "アプリケーションのテスト"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:287
 msgid "To test the application, you should open your browser and access the following URL:"
-msgstr ""
+msgstr "テストするには、ブラウザを開いて以下のURLにアクセスする必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:289
@@ -608,22 +608,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:294
 msgid "In order to authenticate to the application you should type the following credentials when at the Keycloak login page:"
-msgstr ""
+msgstr "アプリケーションを認証するためには、Keycloakのログインページで以下の認証情報を入力する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:296
 msgid "Username: *alice*"
-msgstr ""
+msgstr "Username: *alice*"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:297
 msgid "Password: *alice*"
-msgstr ""
+msgstr "Password: *alice*"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:299
 msgid "After clicking the `Login` button you should be redirected back to the application."
-msgstr ""
+msgstr "`Login` ボタンをクリックすると、アプリケーションにリダイレクトされます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:301
