--- a/l10n/po/ja_JP/_versions/1.7/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/elasticsearch.adoc.po
@@ -28,17 +28,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/elasticsearch.adoc:11
 msgid "Elasticsearch is a well known full text search engine and NoSQL datastore."
-msgstr ""
+msgstr "Elasticsearchはよく知られた全文検索エンジンであり、NoSQLデータストアです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/elasticsearch.adoc:13
 msgid "In this guide, we will see how you can get your REST services to use an Elasticsearch cluster."
-msgstr ""
+msgstr "このガイドでは、RESTサービスでElasticsearchクラスターを使用する方法を見ていきます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/elasticsearch.adoc:16
 msgid "Quarkus provides two ways of accessing Elasticsearch: via the lower level `RestClient` or via the `RestHighLevelClient` we will call them the low level and the high level clients."
-msgstr ""
+msgstr "QuarkusはElasticsearchにアクセスするための2つの方法を提供しています:低レベルの `RestClient` 経由、または `RestHighLevelClient` 経由であり、低レベルと高レベルのクライアントと呼びます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/elasticsearch.adoc:19
