--- a/l10n/po/ja_JP/_versions/1.7/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-jwt.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:13
 msgid "This guide explains how your Quarkus application can utilize MicroProfile JWT (MP JWT) to verify https://tools.ietf.org/html/rfc7519[JSON Web Token]s, represent them as MP JWT `org.eclipse.microprofile.jwt.JsonWebToken` and provide secured access to the Quarkus HTTP endpoints using Bearer Token Authorization and https://en.wikipedia.org/wiki/Role-based_access_control[Role-Based Access Control]."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがMicroProfile JWT(MP JWT)を利用して、 link:https://tools.ietf.org/html/rfc7519[JSON Web Token] を検証し、MP JWT( `org.eclipse.microprofile.jwt.JsonWebToken` )として表現し、Bearer Token Authorizationと link:https://en.wikipedia.org/wiki/Role-based_access_control[Role-Based Access Control] を使用してQuarkus HTTPエンドポイントへのセキュアなアクセスを提供する方法について説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:16
@@ -53,7 +53,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:25
 msgid "The solution is located in the `security-jwt-quickstart` {quickstarts-tree-url}/security-jwt-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `security-jwt-quickstart` {quickstarts-tree-url}/security-jwt-quickstart[directory] にあります。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/security-jwt.adoc:26
@@ -82,7 +82,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:42
 msgid "This command generates the Maven project with a REST endpoint and imports the `smallrye-jwt` extension, which includes the {mp-jwt} support."
-msgstr ""
+msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、{mp-jwt}サポートを含む `smallrye-jwt` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:45
@@ -1611,7 +1611,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-jwt.adoc:714
 #, no-wrap
 msgid "Token Decryption"
-msgstr ""
+msgstr "トークン復号化"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:718
@@ -1632,7 +1632,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-jwt.adoc:725
 #, no-wrap
 msgid "How to check the errors in the logs"
-msgstr ""
+msgstr "ログでエラーを確認する方法"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:728
@@ -1934,37 +1934,37 @@ msgstr "参照"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:863
 msgid "link:https://github.com/eclipse/microprofile-jwt-auth/releases/download/1.1.1/microprofile-jwt-auth-spec.html[MP JWT 1.1.1 HTML]"
-msgstr ""
+msgstr "link:https://github.com/eclipse/microprofile-jwt-auth/releases/download/1.1.1/microprofile-jwt-auth-spec.html[MP JWT 1.1.1 HTML]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:864
 msgid "link:https://github.com/eclipse/microprofile-jwt-auth/releases/download/1.1.1/microprofile-jwt-auth-spec.pdf[MP JWT 1.1.1 PDF]"
-msgstr ""
+msgstr "link:https://github.com/eclipse/microprofile-jwt-auth/releases/download/1.1.1/microprofile-jwt-auth-spec.pdf[MP JWT 1.1.1 PDF]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:865
 msgid "link:https://github.com/smallrye/smallrye-jwt[SmallRye JWT]"
-msgstr ""
+msgstr "link:https://github.com/smallrye/smallrye-jwt[SmallRye JWT]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:866
 msgid "link:https://tools.ietf.org/html/rfc7519[JSON Web Token]"
-msgstr ""
+msgstr "link:https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:867
 msgid "link:https://tools.ietf.org/html/rfc7515[JSON Web Signature]"
-msgstr ""
+msgstr "link:https://tools.ietf.org/html/rfc7515[JSON Web Signature]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:868
 msgid "link:https://tools.ietf.org/html/rfc7516[JSON Web Encryption]"
-msgstr ""
+msgstr "link:https://tools.ietf.org/html/rfc7516[JSON Web Encryption]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:869
 msgid "link:https://tools.ietf.org/html/rfc7518[JSON Web Algorithms]"
-msgstr ""
+msgstr "link:https://tools.ietf.org/html/rfc7518[JSON Web Algorithms]"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jwt.adoc:869
