--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-vertx-http-config-group-form-auth-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-vertx-http-config-group-form-auth-config.adoc.po
@@ -125,7 +125,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-vertx-http-config-group-form-auth-config.adoc:47
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-vertx-http-config-group-form-auth-config.adoc:52
