--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-vertx-http-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-vertx-http-general-config-items.adoc.po
@@ -181,7 +181,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-vertx-http-general-config-items.adoc:56
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-vertx-http-general-config-items.adoc:61
