--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-vertx-http.adoc.po
@@ -219,7 +219,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-vertx-http.adoc:65
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-vertx-http.adoc:70
