--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-http-config-group-auth-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-http-config-group-auth-config.adoc.po
@@ -201,7 +201,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-auth-config.adoc:83
 #, no-wrap
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-auth-config.adoc:88
