--- a/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-web-authentication.adoc.po
@@ -23,12 +23,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:6
 #, no-wrap
 msgid "Quarkus - Using OpenID Connect to Protect Web Applications using Authorization Code Flow."
-msgstr ""
+msgstr "Quarkus - 認可コードフローのOpenID Connectを使用してWebアプリケーションを保護"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:12
 msgid "This guide demonstrates how to use Quarkus OpenID Connect Extension to protect your Quarkus HTTP endpoints using OpenId Connect Authorization Code Flow supported by OpenId Connect compliant Authorization Servers such as https://www.keycloak.org/about.html[Keycloak]."
-msgstr ""
+msgstr "このガイドでは、Quarkus OpenID Connect Extensionを使用して、 link:https://www.keycloak.org/about.html[Keycloak] などのOpenId Connect準拠の認証サーバーでサポートされているOpenId Connect 認可コードフローを使用してQuarkus HTTPエンドポイントを保護する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:14
@@ -95,17 +95,17 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:33
 msgid "In this example, we build a very simple web application with a single page:"
-msgstr ""
+msgstr "この例では、1ページの非常にシンプルなWebアプリケーションを構築しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:35
 msgid "`/index.html`"
-msgstr ""
+msgstr "`/index.html`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:37
 msgid "This page is protected and can only be accessed by authenticated users."
-msgstr ""
+msgstr "このページは保護されており、認証されたユーザーのみがアクセスできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:38
@@ -126,7 +126,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:46
 msgid "The solution is located in the `security-openid-connect-web-authentication-quickstart` {quickstarts-tree-url}/security-openid-connect-web-authentication-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `security-openid-connect-web-authentication-quickstart` {quickstarts-tree-url}/security-openid-connect-web-authentication-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:47
@@ -524,7 +524,7 @@ msgstr "アプリケーションのテスト"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:248
 msgid "To test the application, you should open your browser and access the following URL:"
-msgstr ""
+msgstr "テストするには、ブラウザを開いて以下のURLにアクセスする必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:250
@@ -534,33 +534,33 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:252
 msgid "If everything is working as expected, you should be redirected to the Keycloak server to authenticate."
-msgstr ""
+msgstr "すべてが期待通りに動作している場合は、認証のためにKeycloakサーバーにリダイレクトされるはずです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:254
 msgid "In order to authenticate to the application you should type the following credentials when at the Keycloak login page:"
-msgstr ""
+msgstr "アプリケーションを認証するためには、Keycloakのログインページで以下の認証情報を入力する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:256
 msgid "Username: *alice*"
-msgstr ""
+msgstr "Username: *alice*"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:257
 msgid "Password: *alice*"
-msgstr ""
+msgstr "Password: *alice*"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:259
 msgid "After clicking the `Login` button you should be redirected back to the application."
-msgstr ""
+msgstr "`Login` ボタンをクリックすると、アプリケーションにリダイレクトされます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:260
 #, no-wrap
 msgid "Redirection"
-msgstr ""
+msgstr "リダイレクト"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:263
@@ -586,7 +586,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:272
 #, no-wrap
 msgid "Dealing with Cookies"
-msgstr ""
+msgstr "クッキーの取り扱い"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:275
@@ -647,7 +647,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:293
 #, no-wrap
 msgid "Logout"
-msgstr ""
+msgstr "ログアウト"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:296
@@ -1100,7 +1100,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:510
 #, no-wrap
 msgid "Cloud Services"
-msgstr ""
+msgstr "クラウドサービス"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:512
@@ -1154,7 +1154,7 @@ msgstr "トークンの伝播"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:541
 msgid "Please see link:security-openid-connect-client#token-propagation[Token Propagation] section about the Authorization Code Flow access token propagation to the downstream services."
-msgstr ""
+msgstr "下流サービスへの認可コードフローアクセストークンの伝播については、 link:security-openid-connect-client#token-propagation[トークン伝播] の項を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-openid-connect-web-authentication.adoc:542
