Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/quarkus-intro.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/quarkus-intro.adoc.po
@@ -32,7 +32,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:21
 #, no-wrap
 msgid "Container First"
-msgstr ""
+msgstr "コンテナファースト"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:23
@@ -99,7 +99,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:33
 #, no-wrap
 msgid "Developer Joy"
-msgstr ""
+msgstr "開発者満足"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:35
