--- a/l10n/po/ja_JP/_versions/1.7/guides/index2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/index2.adoc.po
@@ -239,8 +239,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/index2.adoc:68
+#, fuzzy
 msgid "Every contribution is valuable.  It can be a bug report, an example application, a feature request, a fix in the documentation or just feedback."
-msgstr ""
+msgstr "バグレポート、サンプルアプリケーション、フィーチャーリクエスト、ドキュメントの修正、フィードバック、全ての貢献が有益です。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/index2.adoc:69
