--- a/l10n/po/ja_JP/_guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/kotlin.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-23 11:07+0000\n"
-"PO-Revision-Date: 2021-03-24 22:32+0900\n"
+"PO-Revision-Date: 2021-03-26 23:11+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -96,7 +96,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:46
-#, fuzzy
 msgid "When adding `kotlin` to the extensions list, the Maven plugin will generate a project that is properly configured to work with Kotlin. Furthermore the `org.acme.rest.GreetingResource` class is implemented as Kotlin source code (as is the case with the generated tests).  The addition of `resteasy-jackson` in the extension list results in importing the RESTEasy/JAX-RS and Jackson extensions."
 msgstr "`kotlin` をエクステンションリストに追加すると、Maven プラグインは Kotlin で動作するように適切に設定されたプロジェクトを生成します。さらに、 `org.acme.rest.GreetingResource` クラスは Kotlin ソースコードとして実装されます (生成されたテストの場合と同様です)。エクステンションリストに `resteasy-jackson` を追加すると、RESTEasy/JAX-RS と Jackson エクステンションがインポートされます。"
 
@@ -222,7 +221,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kotlin.adoc:115
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Important Maven configuration points"
 msgstr "重要なMavenの設定ポイント"
 
@@ -606,13 +605,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kotlin.adoc:311
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "CDI @Inject with Kotlin"
-msgstr "CDI @Inject with Kotlin"
+msgstr "Kotlinでの CDI @Inject"
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:315
-#, fuzzy
 msgid "Kotlin reflection annotation processing differs from Java.  You may experience an error when using CDI @Inject such as: \"kotlin.UninitializedPropertyAccessException: lateinit property xxx has not been initialized\""
 msgstr "Kotlinのリフレクションアノテーション処理はJavaとは異なります。CDIの@Injectを使用していると、以下のようなエラーが発生することがあります。\"kotlin.UninitializedPropertyAccessException: lateinitプロパティーxxxが初期化されていません\""
 
@@ -754,9 +752,8 @@ msgstr "アプリケーションのパッケージング"
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:387
-#, fuzzy
 msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `target/quarkus-app/quarkus-run.jar` file. You can also build the native executable using `./mvnw package -Pnative`, or `./gradlew buildNative`."
-msgstr "通常通り、 `./mvnw clean package` を使用してアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使用して実行することができます。また、 `./mvnw package -Pnative` 、または `./gradlew buildNative` を使用してネイティブの実行ファイルをビルドすることもできます。"
+msgstr "通常通り、 `./mvnw clean package` を使用してアプリケーションをパッケージ化し、 `target/quarkus-app/quarkus-run.jar` ファイルを使用して実行することができます。また、 `./mvnw package -Pnative` 、または `./gradlew buildNative` を使用してネイティブの実行ファイルをビルドすることもできます。"
 
 #. type: Title ==
 #: upstream/_guides/kotlin.adoc:388
@@ -766,7 +763,6 @@ msgstr "Kotlin と Jackson"
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:392
-#, fuzzy
 msgid "If the `com.fasterxml.jackson.module:jackson-module-kotlin` dependency and the `quarkus-jackson` extension (or the `quarkus-resteasy-jackson` extension) have been added to the project, then Quarkus automatically registers the `KotlinModule` to the `ObjectMapper` bean (see link:rest-json#jackson[this] guide for more details)."
 msgstr "`com.fasterxml.jackson.module:jackson-module-kotlin` 依存関係と `quarkus-jackson` エクステンション(または `quarkus-resteasy-extension` )がプロジェクトに追加されている場合、Quarkus は自動的に `KotlinModule` を `ObjectMapper` Beanに登録します(詳細は link:rest-json#jackson[この] ガイドを参照してください)。"
 
@@ -778,6 +774,5 @@ msgstr "Kotlin coroutines と Mutiny"
 
 #. type: Plain text
 #: upstream/_guides/kotlin.adoc:396
-#, fuzzy
 msgid "Kotlin coroutines provide a imperative programming model that actually gets executed in an asynchronous, reactive manner.  To simplify the interoperation between Mutiny and Kotlin there is the module `io.smallrye.reactive:mutiny-kotlin`, described link:https://smallrye.io/smallrye-mutiny/guides/kotlin[here]."
-msgstr "Kotlinのコルーチンは、非同期で反応的な方法で実際に実行される命令型プログラミングモデルを提供します。MutinyとKotlinの相互運用を簡単にするために、モジュール `io.smallrye.reactive:mutiny-kotlin` があり link:https://smallrye.io/smallrye-mutiny/guides/kotlin[ます]。"
+msgstr "Kotlinのコルーチンは、非同期でリアクティブな方法で実際に実行される命令型プログラミングモデルを提供します。MutinyとKotlinの相互運用を簡単にするために、モジュール `io.smallrye.reactive:mutiny-kotlin` があり link:https://smallrye.io/smallrye-mutiny/guides/kotlin[here] で解説されています。"
