--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -3,31 +3,30 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-23 11:07+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-26 23:18+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/mailer.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Sending emails"
 msgstr "Quarkus - メールの送信"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:11
-#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can send emails using an SMTP server."
 msgstr "このガイドでは、QuarkusアプリケーションがSMTPサーバーを使用して電子メールを送信する方法を説明します。"
 
@@ -49,9 +48,8 @@ msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:18
-#, fuzzy
 msgid "The SMTP hostname, port and credentials, and an email address"
-msgstr "SMTPホスト名、ポート、資格情報、および電子メール アドレス。"
+msgstr "SMTPホスト名、ポート、資格情報、および電子メール アドレス"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:19
@@ -70,9 +68,8 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:22
-#, fuzzy
 msgid "GraalVM installed if you want to run in native mode."
-msgstr "ネイティブモードで動作させたい場合は、GraalVMをインストールします。"
+msgstr "ネイティブモードで動作させたい場合は、GraalVMがインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:23
@@ -81,19 +78,17 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:27
-#, fuzzy
 msgid "In this guide, we are going to see how you can send emails from a Quarkus application.  It covers simple emails, attachments, inlined attachments, the reactive and imperative APIs..."
-msgstr "このガイドでは、Quarkusアプリケーションからメールを送信する方法を見ていきます。シンプルな電子メール、添付ファイル、インラインの添付ファイル、反応型と命令型のAPIをカバーしています。"
+msgstr "このガイドでは、Quarkusアプリケーションからメールを送信する方法を見ていきます。シンプルな電子メール、添付ファイル、インラインの添付ファイル、リアクティブ型と命令型のAPIをカバーしています。"
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:28
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:31
-#, fuzzy
 msgid "Create a new project with the following command:"
 msgstr "以下のコマンドで新規プロジェクトを作成します。"
 
@@ -112,7 +107,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:44
-#, fuzzy
 msgid "If you already have an existing project, add the `mailer` extension:"
 msgstr "既存のプロジェクトがある場合は、 `mailer` のエクステンションを追加してください。"
 
@@ -139,7 +133,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/mailer.adoc:60
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring the mailer"
 msgstr "メーラーの設定"
 
