--- a/l10n/po/ja_JP/_guides/security-jdbc.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jdbc.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-18 15:07+0000\n"
-"PO-Revision-Date: 2021-02-13 02:49+0900\n"
+"PO-Revision-Date: 2021-03-26 22:57+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -519,27 +519,23 @@ msgstr "このガイドでは、簡単な使用例のみを取り上げていま
 
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:291
-#, fuzzy
 msgid "quarkus.datasource.db-kind=postgresql quarkus.datasource.username=quarkus quarkus.datasource.password=quarkus quarkus.datasource.jdbc.url=jdbc:postgresql:multiple-data-sources-users"
-msgstr "quarkus.datasource.db-kind=postgresql quarkus.datasource.username=quarkus quarkus.datasource.password=quarkus quarkus.datasource.jdbc.url=jdbc:postgresql:multiple-data-sources-users quarkus.datasource.jdbc.url=jdbc:postgresql:複数データソースユーザー"
+msgstr "quarkus.datasource.db-kind=postgresql quarkus.datasource.username=quarkus quarkus.datasource.password=quarkus quarkus.datasource.jdbc.url=jdbc:postgresql:multiple-data-sources-users"
 
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:296
-#, fuzzy
 msgid "quarkus.datasource.permissions.db-kind=postgresql quarkus.datasource.permissions.username=quarkus quarkus.datasource.permissions.password=quarkus quarkus.datasource.permissions.jdbc.url=jdbc:postgresql:multiple-data-sources-permissions"
 msgstr "quarkus.datasource.permissions.db-kind=postgresql quarkus.datasource.permissions.username=quarkus quarkus.datasource.permissions.password=quarkus quarkus.datasource.permissions.jdbc.url=jdbc:postgresql:multiple-data-sources-permissions"
 
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:301
-#, fuzzy
 msgid "quarkus.security.jdbc.enabled=true quarkus.security.jdbc.principal-query.sql=SELECT u.password FROM test_user u WHERE u.username=? quarkus.security.jdbc.principal-query.clear-password-mapper.enabled=true quarkus.security.jdbc.principal-query.clear-password-mapper.password-index=1"
 msgstr "quarkus.security.jdbc.enabled=true quarkus.security.jdbc.principal-query.sql=SELECT u.password FROM test_user u WHERE u.username=? quarkus.security.jdbc.principal-query.clear-password-mapper.enabled=true quarkus.security.jdbc.principal-query.clear-password-mapper.password-index=1"
 
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:306
-#, fuzzy
 msgid "quarkus.security.jdbc.principal-query.roles.sql=SELECT r.role_name FROM test_role r, test_user_role ur WHERE ur.username=? AND ur.role_id = r.id quarkus.security.jdbc.principal-query.roles.datasource=permissions quarkus.security.jdbc.principal-query.roles.attribute-mappings.0.index=1 quarkus.security.jdbc.principal-query.roles.attribute-mappings.0.to=groups"
-msgstr "quarkus.security.jdbc.principal-query.rolls.sql=SELECT r.role_name FROM test_role r, test_user_role ur WHERE ur.username=?AND ur.role_id = r.id quarkus.security.jdbc.principal-query.rolls.datasource=permissions quarkus.security.jdbc.principal-query.rolls.attribute-mappings.0.index=1 quarkus.security.jdbc.principal-query.rolls.attribute-mappings.0.to=groups"
+msgstr "quarkus.security.jdbc.principal-query.roles.sql=SELECT r.role_name FROM test_role r, test_user_role ur WHERE ur.username=? AND ur.role_id = r.id quarkus.security.jdbc.principal-query.roles.datasource=permissions quarkus.security.jdbc.principal-query.roles.attribute-mappings.0.index=1 quarkus.security.jdbc.principal-query.roles.attribute-mappings.0.to=groups"
 
 #. type: Title ==
 #: upstream/_guides/security-jdbc.adoc:309
