Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-di.adoc.po
@@ -531,7 +531,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-di.adoc:280
 #, no-wrap
 msgid "Conversion Table"
-msgstr ""
+msgstr "変換テーブル"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-di.adoc:283
@@ -542,7 +542,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-di.adoc:285
 #, no-wrap
 msgid "Spring"
-msgstr ""
+msgstr "Spring"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/spring-di.adoc:285
@@ -554,7 +554,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-di.adoc:287
 #, no-wrap
 msgid "Comments"
-msgstr ""
+msgstr "Comments"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/spring-di.adoc:288
