--- a/l10n/po/ja_JP/_versions/1.7/guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/kotlin.adoc.po
@@ -218,7 +218,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/kotlin.adoc:117
 #, no-wrap
 msgid "Important Maven configuration points"
-msgstr ""
+msgstr "重要なMavenの設定ポイント"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/kotlin.adoc:120
@@ -600,7 +600,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/kotlin.adoc:317
 msgid "Kotlin reflection annotation processing differs from Java.  You may experience an error when using CDI @Inject such as: \"kotlin.UninitializedPropertyAccessException: lateinit property xxx has not been initialized\""
-msgstr ""
+msgstr "Kotlinのリフレクションアノテーション処理はJavaとは異なります。CDIの@Injectを使用していると、以下のようなエラーが発生することがあります。\"kotlin.UninitializedPropertyAccessException: lateinitプロパティーxxxが初期化されていません\""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/kotlin.adoc:319
