--- a/l10n/po/ja_JP/_versions/1.7/guides/security-jdbc.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-jdbc.adoc.po
@@ -523,22 +523,22 @@ msgstr "このガイドでは、簡単な使用例のみを取り上げていま
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jdbc.adoc:291
 msgid "quarkus.datasource.db-kind=postgresql quarkus.datasource.username=quarkus quarkus.datasource.password=quarkus quarkus.datasource.jdbc.url=jdbc:postgresql:multiple-data-sources-users"
-msgstr ""
+msgstr "quarkus.datasource.db-kind=postgresql quarkus.datasource.username=quarkus quarkus.datasource.password=quarkus quarkus.datasource.jdbc.url=jdbc:postgresql:multiple-data-sources-users"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jdbc.adoc:296
 msgid "quarkus.datasource.permissions.db-kind=postgresql quarkus.datasource.permissions.username=quarkus quarkus.datasource.permissions.password=quarkus quarkus.datasource.permissions.jdbc.url=jdbc:postgresql:multiple-data-sources-permissions"
-msgstr ""
+msgstr "quarkus.datasource.permissions.db-kind=postgresql quarkus.datasource.permissions.username=quarkus quarkus.datasource.permissions.password=quarkus quarkus.datasource.permissions.jdbc.url=jdbc:postgresql:multiple-data-sources-permissions"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jdbc.adoc:301
 msgid "quarkus.security.jdbc.enabled=true quarkus.security.jdbc.principal-query.sql=SELECT u.password FROM test_user u WHERE u.username=? quarkus.security.jdbc.principal-query.clear-password-mapper.enabled=true quarkus.security.jdbc.principal-query.clear-password-mapper.password-index=1"
-msgstr ""
+msgstr "quarkus.security.jdbc.enabled=true quarkus.security.jdbc.principal-query.sql=SELECT u.password FROM test_user u WHERE u.username=? quarkus.security.jdbc.principal-query.clear-password-mapper.enabled=true quarkus.security.jdbc.principal-query.clear-password-mapper.password-index=1"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-jdbc.adoc:306
 msgid "quarkus.security.jdbc.principal-query.roles.sql=SELECT r.role_name FROM test_role r, test_user_role ur WHERE ur.username=? AND ur.role_id = r.id quarkus.security.jdbc.principal-query.roles.datasource=permissions quarkus.security.jdbc.principal-query.roles.attribute-mappings.0.index=1 quarkus.security.jdbc.principal-query.roles.attribute-mappings.0.to=groups"
-msgstr ""
+msgstr "quarkus.security.jdbc.principal-query.roles.sql=SELECT r.role_name FROM test_role r, test_user_role ur WHERE ur.username=? AND ur.role_id = r.id quarkus.security.jdbc.principal-query.roles.datasource=permissions quarkus.security.jdbc.principal-query.roles.attribute-mappings.0.index=1 quarkus.security.jdbc.principal-query.roles.attribute-mappings.0.to=groups"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-jdbc.adoc:309
