--- a/l10n/po/ja_JP/_versions/1.7/guides/security-ldap.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-ldap.adoc.po
@@ -90,7 +90,7 @@ msgstr "`/api/admin`"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:33
 msgid "The `/api/public` endpoint can be accessed anonymously.  The `/api/admin` endpoint is protected with RBAC (Role-Based Access Control) where only users granted with the `adminRole` role can access. At this endpoint, we use the `@RolesAllowed` annotation to declaratively enforce the access constraint.  The `/api/users/me` endpoint is also protected with RBAC (Role-Based Access Control) where only users granted with the `standardRole` role can access. As a response, it returns a JSON document with details about the user."
-msgstr ""
+msgstr "`/api/public` エンドポイントは匿名でアクセスできます。 `/api/admin` エンドポイントは RBAC (Role-Based Access Control) で保護されており、 `adminRole` ロールで許可されたユーザーのみがアクセスできます。このエンドポイントでは、 `@RolesAllowed` アノテーションを使用して、アクセス制約を宣言的に強制します。 `/api/users/me` エンドポイントも RBAC (Role-Based Access Control) で保護されており、 `standardRole` ロールで付与されたユーザーのみがアクセスできます。レスポンスとして、ユーザーに関する詳細を含むJSONドキュメントを返します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-ldap.adoc:34
@@ -142,7 +142,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:61
 msgid "If you already have your Quarkus project configured, you can add the `elytron-security-ldap` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `elytron-security-ldap` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-ldap.adoc:65
@@ -219,7 +219,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:104
 msgid "The source code for the `/api/admin` endpoint is also very simple. The main difference here is that we are using a `@RolesAllowed` annotation to make sure that only users granted with the `adminRole` role can access the endpoint:"
-msgstr ""
+msgstr "`/api/admin` エンドポイントのソースコードも非常にシンプルです。ここでの主な違いは、 `adminRole` ロールで付与されたユーザーだけがエンドポイントにアクセスできるように `@RolesAllowed` アノテーションを使用していることです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-ldap.adoc:115
@@ -256,7 +256,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:130
 msgid "Finally, let's consider the `/api/users/me` endpoint. As you can see from the source code below, we are trusting only users with the `standardRole` role.  We are using `SecurityContext` to get access to the current authenticated Principal and we return the user's name. This information is loaded from the LDAP server."
-msgstr ""
+msgstr "最後に、 `/api/users/me` エンドポイントを考えてみましょう。下のソースコードを見ればわかるように、私たちは `standardRole` の役割を持つユーザのみを信頼しています。現在認証されているプリンシパルへのアクセスを得るために `SecurityContext` を使用しており、ユーザー名を返します。この情報は LDAP サーバーから読み込まれます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-ldap.adoc:143
@@ -336,7 +336,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:177
 msgid "The `elytron-security-ldap` extension requires a dir-context and an identity-mapping with at least one attribute-mapping to authenticate the user and its identity."
-msgstr ""
+msgstr "`elytron-security-ldap` エクステンションでは、ユーザーとそのアイデンティティを認証するために、 dir-context と、少なくとも一つの属性マッピングを持つ アイデンティティマッピング が必要です。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-ldap.adoc:178
@@ -410,12 +410,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:218
 msgid "By providing the `adminUser:adminUserPassword` credentials, the extension authenticated the user and loaded their roles.  The `adminUser` user is authorized to access to the protected resources."
-msgstr ""
+msgstr "`adminUser:adminUserPassword` 資格情報を提供することで、エクステンションはユーザーを認証し、そのロールをロードしました。 `adminUser` ユーザーは、保護されたリソースへのアクセスを許可されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:220
 msgid "The user `adminUser` should be forbidden to access a resource protected with `@RolesAllowed(\"standardRole\")` because it doesn't have this role."
-msgstr ""
+msgstr "ユーザー `adminUser` は、この役割を持っていないので、 `@RolesAllowed(\"standardRole\")` で保護されたリソースへのアクセスを禁止する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-ldap.adoc:226
@@ -436,7 +436,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-ldap.adoc:231
 msgid "Finally, using the user `standardUser` works and the security context contains the principal details (username for instance)."
-msgstr ""
+msgstr "最後に、ユーザー `standardUser` を使用すると動作し、セキュリティーコンテキストには主要な詳細(例えばユーザー名)が含まれています。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-ldap.adoc:237
