--- a/l10n/po/ja_JP/_versions/1.7/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/spring-web.adoc.po
@@ -623,7 +623,7 @@ msgstr "アノテーション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:386
 msgid "The table below summarizes the supported annotations:"
-msgstr ""
+msgstr "下の表は、サポートされているアノテーションをまとめたものです。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/spring-web.adoc:387
@@ -635,14 +635,14 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:389
 #, no-wrap
 msgid "Nam"
-msgstr ""
+msgstr "Nam"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:391
 #: upstream/_versions/1.7/guides/spring-web.adoc:473
 #, no-wrap
 msgid "Comments"
-msgstr ""
+msgstr "Comments"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:392
@@ -859,7 +859,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:466
 #, no-wrap
 msgid "Conversion Table"
-msgstr ""
+msgstr "変換テーブル"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-web.adoc:469
@@ -870,7 +870,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:471
 #, no-wrap
 msgid "Spring"
-msgstr ""
+msgstr "Spring"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-web.adoc:471
