--- a/l10n/po/ja_JP/_versions/1.7/guides/spring-security.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/spring-security.adoc.po
@@ -445,39 +445,39 @@ msgstr "アノテーション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-security.adoc:253
 msgid "The table below summarizes the supported annotations:"
-msgstr ""
+msgstr "下の表は、サポートされているアノテーションをまとめたものです。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/spring-security.adoc:254
 #, no-wrap
 msgid "Supported Spring Security annotations"
-msgstr ""
+msgstr "サポートされているSpring Securityアノテーション"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-security.adoc:256
 #, no-wrap
 msgid "Nam"
-msgstr ""
+msgstr "Nam"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-security.adoc:258
 #: upstream/_versions/1.7/guides/spring-security.adoc:424
 #, no-wrap
 msgid "Comments"
-msgstr ""
+msgstr "Comments"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-security.adoc:259
 #, no-wrap
 msgid "@Secured"
-msgstr ""
+msgstr "@Secured"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/spring-security.adoc:262
 #: upstream/_versions/1.7/guides/spring-security.adoc:266
 #, no-wrap
 msgid "@PreAuthorize"
-msgstr ""
+msgstr "@PreAuthorize"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-security.adoc:264
@@ -823,18 +823,18 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-security.adoc:417
 #, no-wrap
 msgid "Conversion Table"
-msgstr ""
+msgstr "変換テーブル"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-security.adoc:420
 msgid "The following table shows how Spring Security annotations can be converted to JAX-RS annotations."
-msgstr ""
+msgstr "次の表は、Spring SecurityアノテーションをJAX-RSアノテーションに変換する方法を示しています。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-security.adoc:422
 #, no-wrap
 msgid "Spring"
-msgstr ""
+msgstr "Spring"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-security.adoc:422
@@ -846,13 +846,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-security.adoc:425
 #, no-wrap
 msgid "@Secured(\"admin\")"
-msgstr ""
+msgstr "@Secured(\"admin\")"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-security.adoc:426
 #, no-wrap
 msgid "@RolesAllowed(\"admin\")"
-msgstr ""
+msgstr "@RolesAllowed(\"admin\")"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/spring-security.adoc:430
